fixing spacing

--- a/static/style.styl
+++ b/static/style.styl
@@ -49,4 +49,4 @@ html, body
 .navbar
 	margin-bottom 0px
 .emptyNavSpacing
-	height 50px
+	height 52px
